--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
+# Node.js
 node_modules
 dist
 dist-ssr
@@ -22,3 +23,11 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+# Ignore JSON files
+*.json
+
+# Ignore eslint and other config files
+eslint.config.js
+postcss.config.js
+tailwind.config.js
+vite.config.js
