fixing deployment issues.

--- a/.gitignore
+++ b/.gitignore
@@ -28,9 +28,8 @@ dist-ssr
 
 # Ignore eslint and other config files
 eslint.config.js
-postcss.config.js
-tailwind.config.js
-vite.config.js
+
 
 # Ignore environment and configuration files
 .env
+/dist
