--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.26.1",
+    "react-share": "^5.1.1",
     "react-slider": "^2.0.6",
     "react-toastify": "^10.0.6",
     "swiper": "^11.1.12",
